--- a/lesson09/package.json
+++ b/lesson09/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "gulp": "^3.9.1",
     "gulp-concat-css": "^2.3.0",
+    "gulp-connect": "^5.0.0",
     "gulp-livereload": "^3.8.1"
   }
 }
