--- a/lesson23/package.json
+++ b/lesson23/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.6.2",
+    "angular": "^1.6.3",
+    "angular-route": "^1.6.3",
     "bootstrap": "^3.3.7",
-    "chance": "^1.0.6"
+    "gulp": "^3.9.1",
+    "gulp-connect": "^5.0.0"
   }
 }
